challenges/pro-dev/k8s/final/ingress.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: votes-app
  labels:
    name: votes-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votes-app-ingress
  namespace: votes-app
spec:
  defaultBackend:
    service:
      name: upvote-app
      port:
        number: 3000
  rules:
  - http:
      paths:
      - backend:
          service:
            name: votes-app
            port:
              number: 3001
        path: /tally
        pathType: Prefix
      - backend:
          service:
            name: votes-api
            port:
              number: 3333
        path: /votes
        pathType: Exact
      - backend:
          service:
            name: votes-api
            port:
              number: 3333
        path: /vote
        pathType: Exact
